--- a/config.tmpl
+++ b/config.tmpl
@@ -2,5 +2,5 @@ URL=https://www.immobilienscout24.de/Suche/S-T/Wohnung-Miete/Berlin/Berlin/-/2,5
 FROM=fromemail@example.com
 TO=toemail@example.com
 SENDGRID_API_KEY=abcd
-TG_BOT_KEY=dcba
+TG_BOT_TOKEN=dcba
 TG_CHAT_ID=wxyz
